--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": ">=7.1.0",
-		"twbs/bootstrap": "v4.1.3"
+		"php": ">=7.1.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
