--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
   },
   "require": {
     "php": ">=7.1.0",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-fileinfo": "*",
+    "ext-apc": "*"
   },
   "suggest": {
     "paragonie/random_compat": "Provides better randomness in PHP 5.x"
