--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "php": ">=7.1.0",
     "ext-json": "*",
     "ext-fileinfo": "*",
-    "ext-apc": "*"
+    "ext-apc": "*",
+    "ext-openssl": "*"
   },
   "suggest": {
     "paragonie/random_compat": "Provides better randomness in PHP 5.x"
